# rhai_trace

./: CHANGELOG.md  Cargo.toml  README.md  changelog.rss  index.html  oranda.json
book/: 404.html  better_errors.html  extracting_spans.html  index.html  introduction.html  print.html  searchindex.js  searchindex.json  span_structure.html
changelog/: index.html
changelog/v0.1.0/: index.html
changelog/v0.2.0/: index.html
docs/: book.toml
docs/src/: SUMMARY.md  better_errors.md  extracting_spans.md  introduction.md  span_structure.md
example/: Cargo.toml
example/src/: main.rs
src/: error.rs  lib.rs  span.rs  tracer.rs
test_bin/: Cargo.toml
tester/: Cargo.toml
